quiz modal && uitable wordbreak && question form icon alignment && quiz attempt table issue resolved

--- a/assets/scss/modules/quiz-icons.scss
+++ b/assets/scss/modules/quiz-icons.scss
@@ -2,7 +2,7 @@
 	padding: 0;
 	color: #fff;
 	border-radius: 3px;
-	margin-right: 2px;
+	margin-right: 5px;
 	display: inline-block;
 	width: 22px;
 	height: 22px;
